# waves-previewer

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  out1.txt  patch.diff
.agents/skills/batch-loudness/: SKILL.md
.agents/skills/batch-loudness/agents/: openai.yaml
.agents/skills/cli-session-workflow/: SKILL.md
.agents/skills/cli-session-workflow/agents/: openai.yaml
.agents/skills/effect-graph-authoring/: SKILL.md
.agents/skills/effect-graph-authoring/agents/: openai.yaml
.agents/skills/effect-graph-test/: SKILL.md
.agents/skills/effect-graph-test/agents/: openai.yaml
.agents/skills/external-merge-review/: SKILL.md
.agents/skills/external-merge-review/agents/: openai.yaml
.agents/skills/gui-screenshot-debug/: SKILL.md
.agents/skills/gui-screenshot-debug/agents/: openai.yaml
.agents/skills/list-query-review/: SKILL.md
.agents/skills/list-query-review/agents/: openai.yaml
.agents/skills/loop-authoring/: SKILL.md
.agents/skills/loop-authoring/agents/: openai.yaml
.agents/skills/music-analysis-markers/: SKILL.md
.agents/skills/music-analysis-markers/agents/: openai.yaml
.agents/skills/plugin-draft-preview/: SKILL.md
.agents/skills/plugin-draft-preview/agents/: openai.yaml
.agents/skills/plugin-search-paths/: SKILL.md
.agents/skills/plugin-search-paths/agents/: openai.yaml
.agents/skills/render-editor-review/: SKILL.md
.agents/skills/render-editor-review/agents/: openai.yaml
.agents/skills/transcript-batch-generate/: SKILL.md
.agents/skills/transcript-batch-generate/agents/: openai.yaml
.agents/skills/verify-loop-tags/: SKILL.md
.agents/skills/verify-loop-tags/agents/: openai.yaml
.cargo/: config.toml
.github/workflows/: release.yml
assets/fonts/: OFL.txt
code_map/: README.md
code_map/change_lookup/: README.md
code_map/flows/: README.md
code_map/performance/: README.md
code_map/src/: README.md
code_map/src/app/: README.md
code_map/src/app/ops/: README.md
code_map/src/app/render/: README.md
code_map/src/app/ui/: README.md
code_map/src/plugin/: README.md
commands/: build_installer.ps1  download_whisper.ps1  generate_sine.ps1  generate_srt.ps1  mcp_smoke.ps1  measure_editor_mp3_load.ps1
docs/: ARCHITECTURE.md  CLIPBOARD_HOTKEY_ISSUE_20260201.md  CLI_AGENT_HUMAN_DESIGN.md  CLI_AGENT_WORKFLOWS.md  CLI_COMMAND_REFERENCE.md  CLI_HELP_SPEC.md  CLI_MASTER_PLAN.md  CLI_MIGRATION_MATRIX.md  CONTRIBUTING.md  CONTROLS.md  DESIGN.md  DEV_NOTES.md  EDITING.md  EDITING_PLAN.md  EDITOR_REDESIGN_SPEC.md  EDITOR_SPEC.md  FINALIZING_EXACT_AUDIO_ACCELERATION_20260317.md  FINALIZING_EXACT_AUDIO_INVESTIGATION_20260316.md  FINALIZING_EXACT_AUDIO_QUESTION_20260317.md  FORMAT_SUPPORT.md  GAME_AUDIO_EDITOR_FULL_AUDIT_20260715.md  IMPLEMENTATION_PLAN.md  INDEX.md  KNOWN_ISSUES.md  LINUX_DEBUG.md  LIST_CLIPBOARD_COPY_PLAN.md  LIST_INTERACTION_SPEC.md  LOOP_RECORDING_AUTO_TRIM_IMPLEMENTATION_PLAN_20260607.md  MAJOR_UPDATE_PLAN.md  MP3_M4A_SUPPORT_PLAN.md  NEXT_WAVEDITER.md  NWPROJ_PLAN.md  OFFLINE_PLAYBACK_INVESTIGATION_20260316.md  PERFORMANCE_SCALABILITY_PLAN.md  PITCH_RISE_INVESTIGATION_20260318.md  REFACTOR_PLAN.md  Rust と egui で音声ファイルをデスクトップや DAW へドラッグ配置する実装調査レポート.md  SOUND_LIST_IMPORT_PLAN.md  TAB_SESSION_SPEC.md  UI_PERFORMANCE_IMPROVEMENT_CANDIDATES_20260606.md  (+11 more)
docs/archive/mcp/: MCP実装ノウハウ.md
installer/: NeoWaves.iss
src/: app.rs  audio.rs  audio_capture.rs  audio_io.rs  cli.rs  crash_report.rs  flac_meta.rs  ipc.rs  kittest.rs  lib.rs  loop_markers.rs  main.rs  markers.rs  meter.rs  wave.rs
src/app/: app_init.rs  audio_ops.rs  audition_ops.rs  auto_trim.rs  auto_trim_ops.rs  bwf_ops.rs  capture.rs  cli_ops.rs  cli_workspace.rs  clipboard_ops.rs  crash_report_ops.rs  debug_ops.rs  declick.rs  declip.rs  dehum.rs  dialogs.rs  duplicate_ops.rs  editor_decode_ops.rs  editor_features.rs  editor_ops.rs  editor_viewport.rs  effect_graph_ops.rs  engine_export.rs  export_ops.rs  external.rs  external_load_jobs.rs  external_load_ops.rs  external_ops.rs  fingerprint.rs  frame_ops.rs  gain_ops.rs  helpers.rs  hf_cache.rs  input_ops.rs  inspect_ops.rs  inspection.rs  keymap.rs  kittest_ops.rs  list_ops.rs  list_preview_ops.rs  (+47 more)
src/app/render/: binning.rs  colors.rs  mini_meter.rs  mod.rs  music_features.rs  overlay.rs  overlay_cache.rs  spectrogram.rs  waveform_pyramid.rs  world_features.rs
src/app/ui/: debug.rs  dsp_widgets.rs  duplicates.rs  editor.rs  effect_graph.rs  export_settings.rs  external.rs  harmonics.rs  inspection.rs  keymap_settings.rs  list.rs  mod.rs  plugin_manager.rs  recording.rs  regions.rs  shortcuts.rs  tools.rs  topbar.rs  transcript.rs  transcription_settings.rs  undo_history.rs  zoo.rs
src/app/ui/list/: art.rs  badges.rs  (+3 more)
src/mcp/: bridge.rs  mod.rs  server.rs  state.rs  types.rs
src/mcp/prompts/: mod.rs  templates.rs
src/mcp/resources/: list.rs  mod.rs  read.rs
src/mcp/tools/: debug.rs  edit.rs  export.rs  filesystem.rs  list.rs  mod.rs  playback.rs
src/plugin/: client.rs  gui_worker.rs  mod.rs  protocol.rs  worker.rs
src/plugin/backends/: clap.rs  generic.rs  mod.rs  vst3.rs
tests/: audio_convert_matrix.rs  audio_format_io.rs  audio_resample.rs  batch_qa_cli_inspect.rs  batch_qa_inspection.rs  batch_qa_loudnorm.rs  cli_decode_failures.rs  editor_audio_params.rs  editor_inspector_virtual_regressions.rs  editor_trim_seek_bounds.rs  engine_export_cli.rs  export_overwrite_undo.rs  gui_kittest_suite.rs  large_list_bench.rs  list_id_clash_probe.rs  mp3_preview_timing.rs  non_destructive_policy.rs  p1_operability.rs  p2_dither.rs  p2_editor_ops.rs  p3_audition.rs  p3_duplicates.rs  p3_light_theme.rs  p3_plugin_ui.rs  p3_spectral_tools.rs  p4_usability.rs  p6_metering.rs  p7_pipeline.rs  plugin_backend_routing.rs  plugin_gui_protocol_roundtrip.rs  plugin_protocol_roundtrip.rs  plugin_vst3_native_process_smoke.rs  plugin_vst3_ott_fallback_process.rs  plugin_vst3_ott_probe.rs  plugin_vst3_windows_effect_smoke.rs  plugin_worker_protocol.rs  plugin_worker_timeout.rs  recording_edit_save.rs  session_virtual_edit_restore.rs  session_virtual_restore.rs  (+6 more)
(+3 files in other folders)
