[package]
name = "neowaves"
version = "0.20260201.1"
edition = "2021"
default-run = "neowaves"
build = "build.rs"
description = "NeoWaves Audio List Editor"

[dependencies]
anyhow = "1.0.100"
eframe = { version = "0.33.3", default-features = false }
egui = "0.33.3"
egui_extras = "0.33.3"
cpal = "0.17.1"
hound = "3.5"
walkdir = "2.5"
rfd = "0.17.1"
arc-swap = "1.8.0"
atomic_float = "1"
signalsmith-stretch = "0.1.3"
image = "0.25.9"
rustfft = "6"
regex = "1.12.2"
symphonia = { version = "0.5.5", default-features = false, features = ["wav", "pcm", "mp3", "isomp4", "aac", "alac", "ogg", "vorbis"] }
id3 = "1"
mp4ameta = "0.13"
mp3lame-encoder = "0.2.2"
fdk-aac = "0.8"
mp4 = "0.14"
vorbis_rs = "0.5.5"
bytes = "1.11.0"
base64 = "0.22"
csv = "1.3"
calamine = "0.25"
rubato = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.8"
tiny_http = "0.12"
chrono = "0.4"
egui_kittest = { version = "0.33.3", optional = true, features = ["eframe"] }
clack-host = { git = "https://github.com/prokopyl/clack", package = "clack-host", optional = true }
clack-extensions = { git = "https://github.com/prokopyl/clack", package = "clack-extensions", optional = true, features = ["clack-host", "gui", "params", "state"] }
vst3 = { version = "0.3.0", optional = true }
libloading = { version = "0.8.9", optional = true }

[features]
default = ["glow", "plugin_native_vst3", "plugin_native_clap"]
glow = ["eframe/glow"]
wgpu = ["eframe/wgpu"]
kittest = ["egui_kittest"]
plugin_native_vst3 = ["vst3", "libloading"]
plugin_native_clap = ["clack-host", "clack-extensions"]

[build-dependencies]
windows_exe_info = "0.5.2"

[target.'cfg(windows)'.dependencies]
clipboard-win = "4.5.0"
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
