[package]
name = "neowaves"
version = "0.20260404.1"
edition = "2021"
default-run = "neowaves"
build = "build.rs"
description = "NeoWaves Audio List Editor"

[dependencies]
anyhow = "1.0.101"
eframe = { version = "0.33.3", default-features = false }
egui = "0.33.3"
egui_extras = "0.33.3"
cpal = "0.17.1"
hound = "3.5"
walkdir = "2.5"
rfd = "0.17.2"
arc-swap = "1.8.2"
atomic_float = "1"
memmap2 = "0.9"
signalsmith-stretch = { path = "vendor/signalsmith-stretch" }
image = "0.25.9"
rustfft = "6"
realfft = "3"
regex = "1.12.3"
ndarray = "0.17"
rand = "0.8"
symphonia = { version = "0.5.5", default-features = false, features = ["wav", "pcm", "mp3", "isomp4", "aac", "alac", "ogg", "vorbis"] }
id3 = "1.16.4"
mp4ameta = "0.13"
mp3lame-encoder = "0.2.2"
fdk-aac = "0.8"
mp4 = "0.14"
vorbis_rs = "0.5.5"
bytes = "1.11.1"
base64 = "0.22"
csv = "1.3"
calamine = "0.25"
rubato = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.12"
tiny_http = "0.12"
chrono = "0.4"
hf-hub = "0.4.3"
ort = { version = "2.0.0-rc.11", features = ["download-binaries", "tls-native", "directml"] }
tokenizers = { version = "0.20.3", default-features = false, features = ["onig"] }
egui_kittest = { version = "0.33.3", optional = true, features = ["eframe"] }
clack-host = { git = "https://github.com/prokopyl/clack", package = "clack-host", optional = true }
clack-extensions = { git = "https://github.com/prokopyl/clack", package = "clack-extensions", optional = true, features = ["clack-host", "gui", "params", "state"] }
vst3 = { version = "0.3.0", optional = true }
libloading = { version = "0.9.0", optional = true }

[features]
default = ["glow", "plugin_native_vst3", "plugin_native_clap"]
glow = ["eframe/glow", "eframe/x11", "eframe/wayland"]
wgpu = ["eframe/wgpu", "eframe/x11", "eframe/wayland"]
kittest = ["egui_kittest"]
kittest_render = ["kittest", "egui_kittest/wgpu"]
plugin_native_vst3 = ["vst3", "libloading"]
plugin_native_clap = ["clack-host", "clack-extensions"]

[build-dependencies]
windows_exe_info = "0.5.2"

[target.'cfg(windows)'.dependencies]
clipboard-win = "4.5.0"
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
